@@ -188,6 +188,7 @@ call_user_func(function () {
         include_once KREXX_DIR . 'src/View/RenderInterface.php';
         include_once KREXX_DIR . 'src/View/AbstractRender.php';
         include_once KREXX_DIR . 'src/View/Messages.php';
+        include_once KREXX_DIR . 'src/View/Message.php';
 
         include_once KREXX_DIR . 'src/View/Skins/Hans/SingleEditableChild.php';
         include_once KREXX_DIR . 'src/View/Skins/Hans/ExpandableChild.php';
