@@ -51,8 +51,9 @@ trait Messages
     {
         $result = '';
         $messageTemplate = $this->getTemplateFileContent(static::FILE_MESSAGE);
+        /** @var \Brainworxx\Krexx\View\Message $message */
         foreach ($messages as $message) {
-            $result .= str_replace($this->markerMessages, $message, $messageTemplate);
+            $result .= str_replace($this->markerMessages, $message->getText(), $messageTemplate);
         }
 
         return $result;
